src/test/resources/de/cd4analysis/cocos/ebnf/invalid/CD4AC0014.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0014 {
  class C {
    AnUndefinedType attr;
  }
}